# RustAlgorithmTrading

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECT_DELIVERABLES.md  CODER_DELIVERABLES.txt  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  QUICK_START_UV.md  README.md  RUST_FIXES_APPLIED.md  STAGING_QUICKREF.md  VENV_MIGRATION_GUIDE.md  WEEK3.5_CHANGES.txt  WSL2_PERFORMANCE_FIX.md  autonomous-trading.service  commands.txt  error.txt  fix_it.txt  install_all_dependencies_fast.sh  pyproject.toml  requirements.txt
analysis/: rsi_signal_analysis.py
config/: README.md  __init__.py  config.py  system.json
data/: download_stats_20251022_163717.json  download_stats_20251102_180006.json  download_stats_20251102_180050.json  metrics.duckdb  observability.duckdb.wal
docker/: .dockerignore  .env.example  .env.staging
docs/: API_DOCUMENTATION.md  AUTONOMOUS_SYSTEM_GUIDE.md  CICD_DEPLOYMENT_GUIDE.md  CODER_IMPLEMENTATION_COMPLETE.md  DATA_DOWNLOAD_GUIDE.md  DATA_MANAGEMENT.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  Plano.md  QUICK_START.md  QUICK_START_FIXED.md  README.md  STORAGE_GUIDE.md  TESTING_COMPLETE.md  TEST_EXECUTION_GUIDE.md  index.md  python-backtesting-guide.md  workspace-structure.md
examples/: README.md  basic_backtest.py  enhanced_momentum_example.py  (+3 more)
rust/execution-engine/: Cargo.toml
rust/execution-engine/src/: lib.rs  main.rs  retry.rs  router.rs  slippage.rs  stop_loss_executor.rs
rust/market-data/: Cargo.toml
rust/market-data/src/: aggregation.rs  lib.rs  main.rs  orderbook.rs  publisher.rs  websocket.rs
rust/market-data/tests/: orderbook_tests.rs
tests/: COVERAGE_REPORT.md  Cargo.toml  README.md  README_API_TESTS.md  TEST_SUITE_SUMMARY.md  TEST_SUMMARY.md  conftest.py  pytest.ini  run_all_tests.sh  test_alpaca_api_limits.py  test_alpaca_quick.py  test_backtest_integration.py  test_data_download.py  test_data_downloader.py  test_timezone_handling.py
tests/benchmarks/: critical_path_benchmarks.rs  orderbook_bench.rs
tests/docs/: COMPREHENSIVE_TESTING_STRATEGY.md
tests/e2e/: test_full_system.py
tests/edge_cases/: test_edge_cases.py
tests/fixtures/: mod.rs
tests/integration/: test_alpaca_api.rs  test_autonomous_system.py  test_backtest_signal_flow.py  test_backtest_signal_validation.py  test_concurrent.rs  test_end_to_end.rs  test_error_handling_integration.rs  test_momentum_signal_generation.py  test_observability_integration.py  test_observability_integration.rs  test_performance_load.rs  test_risk_execution_observability.rs  test_stop_loss_integration.rs
tests/integration/python/: test_alpaca_integration.py
tests/ml/: test_feature_engineering.py  test_models.py
tests/observability/: conftest.py  test_api.py  test_databases.py  test_duckdb_client.py  test_integration.py  test_log_streams.py  test_logging.py  test_performance.py  test_sqlite_client.py  test_startup.py  test_structured_logger.py
tests/performance/: test_performance.py
tests/property/: test_order_invariants.rs  test_property_based.py
tests/strategies/: README.md  conftest.py  run_improvement_tests.py  test_momentum_improvements.py
tests/unit/: test_adx_filter.py  test_alpaca_auth.rs  test_asymmetric_holding_period.py  test_common_health.rs  test_common_types.rs  test_data_handler.py  test_download_data.py  test_execution_router.rs  test_exit_signal_fix.py  test_market_data_orderbook.rs  test_market_regime.py  test_momentum_strategy.py  test_momentum_strategy_improved.py  test_portfolio_handler_shorts.py  test_position_sizing.py  test_race_condition.py  test_race_condition_simple.py  test_reserved_cash.py  test_risk_limits.rs  test_rsi_fix_week2.py  test_signal_diagnostics.py  test_signal_execution_bug.py  test_signal_validation.py  test_week3_stop_loss_immediate_exit.py
tests/unit/python/: test_backtest_engine.py  test_backtesting.py  test_enhanced_momentum.py  test_features.py  test_models.py  test_strategies.py  test_strategy_base.py
tests/validation/: test_momentum_fixes.py
(+344 files in other folders)
