[package]
name = "rust-algo-trading-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core crates from workspace
common = { path = "../rust/common" }
market-data = { path = "../rust/market-data" }
execution-engine = { path = "../rust/execution-engine" }
risk-manager = { path = "../rust/risk-manager" }
signal-bridge = { path = "../rust/signal-bridge" }

# Testing dependencies
tokio = { version = "1.38", features = ["full", "test-util"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Test-only dependencies
[dev-dependencies]
mockall = "0.12"
proptest = "1.5"
criterion = "0.5"
tempfile = "3.12"
assert_matches = "1.5"

[[test]]
name = "integration"
path = "integration/test_end_to_end.rs"

[[test]]
name = "websocket_integration"
path = "integration/test_websocket.rs"

[[test]]
name = "concurrent_integration"
path = "integration/test_concurrent.rs"

[[bench]]
name = "orderbook_bench"
path = "benchmarks/orderbook_bench.rs"
harness = false
