[package]
name = "execution-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
common = { path = "../common" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Messaging
zmq.workspace = true

# Observability
metrics.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Rate limiting
governor = "0.6"

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"

[[bin]]
name = "execution-engine"
path = "src/main.rs"

[lib]
name = "execution_engine"
path = "src/lib.rs"
