[package]
name = "execution-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
common = { path = "../common" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Messaging
zmq.workspace = true

# Observability
metrics.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# PERFORMANCE OPTIMIZATION: Binary serialization
bincode = "1.3"

# PERFORMANCE OPTIMIZATION: SIMD JSON parsing
simd-json = "0.13"

# Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Rate limiting
governor = "0.6"

# Random number generation
rand = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"

[[bin]]
name = "execution-engine"
path = "src/main.rs"

[lib]
name = "execution_engine"
path = "src/lib.rs"
